--- a/app.json
+++ b/app.json
@@ -1,3 +1,8 @@
 {
-  "appName": "errorlog-web"
+  "appName": "errorlog-web",
+  "jdbc": {
+    "jdbc/errorlog": {
+      "url": "${ERRORLOG_DB}"
+    }
+  }
 }
