--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <maven.javadoc.plugin.version>2.10.1</maven.javadoc.plugin.version>
         <maven.surefire.version>2.20.1</maven.surefire.version>
         <frontend.maven.plugin.version>1.4</frontend.maven.plugin.version>
+        <skip.install>true</skip.install>
     </properties>
 
     <pluginRepositories>
@@ -57,10 +58,6 @@
                 <configuration>
                     <skip>${skip.install}</skip>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
