--- a/errorlog-web-service/pom.xml
+++ b/errorlog-web-service/pom.xml
@@ -53,6 +53,11 @@
             <version>${jersey.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
